# Agentic-Frameworks

./: .env.example  .gitignore  README.md  clean_sample.py  pyproject.toml  run.py  run_evals.py
agentcoder/src/agentcoder/: __init__.py  crew.py  flow.py
agentcoder/src/agentcoder/config/: agents.yaml  tasks.yaml
agilecoder/src/agilecoder/: __init__.py  crew.py  flow.py
agilecoder/src/agilecoder/config/: agents.yaml  tasks.yaml
codecor/src/codecor/: __init__.py  crew.py  flow.py
codecor/src/codecor/config/: agents.yaml  tasks.yaml
outputs/agentcoder/: samples.jsonl  samples_eval_results.json  usage_metrics.jsonl
outputs/agilecoder/: samples.jsonl  samples_eval_results.json  usage_metrics.jsonl
outputs/baseline/: samples.jsonl  samples_eval_results.json  usage_metrics.jsonl
outputs/codecor/: samples.jsonl  samples_eval_results.json  usage_metrics.jsonl
