[project]
name = "fyp_agentic_frameworks"
version = "0.1.0"
description = "Replications of multi-agentic systems for coding."
authors = [{ name = "Colin Wang", email = "colin.wang@ucdconnect.ie" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
    "evalplus",
    "lancedb<0.30.1",
    "langchain-community>=0.4.1",
    "openai>=2.29.0",
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["agilecoder", "codecor", "agentcoder"]
